--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,7 +2,9 @@
 @import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
-// @import "vendor/swiper.less";
+@import (less) "vendor/swiper.css";
+@import "vendor/swiper.less";
+@import "vendor/swiper_theme.less";
 @import "blocks/header.less";
 @import "blocks/home.less";
 @import "blocks/do-it.less";
@@ -31,4 +33,3 @@
 @import "blocks/event.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
-@import (less) "vendor/swiper.css";
