--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,7 +2,6 @@
 @import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
-@import (less) "vendor/swiper.css";
 @import "vendor/swiper.less";
 @import "vendor/swiper_theme.less";
 @import "blocks/header.less";
@@ -11,7 +10,7 @@
 @import "blocks/subscribe-form.less";
 @import "blocks/blog-listing.less";
 @import "blocks/contacts.less";
-@import "blocks/events-short.less";
+@import "blocks/upcoming.less";
 @import "blocks/article.less";
 @import "blocks/socials.less";
 @import "blocks/about.less";
