--- a/src/styles/blocks/upcoming.less
+++ b/src/styles/blocks/upcoming.less
@@ -27,11 +27,16 @@
         font-size: 0px;
         margin-left: 20px;
         margin-right: 20px;
+        border: none;
+        background-color: transparent;
         transition: currentColor 0.2s, color 0.2s;
         &:hover {
             cursor: pointer;
             currentColor: @red;
             color: @red;
+        }
+        &--left {
+            transform: scaleX(-1);
         }
     }
 
