--- a/src/styles/blocks/promo.less
+++ b/src/styles/blocks/promo.less
@@ -14,14 +14,14 @@
         &::before {
             content: "";
             display: block;
-            padding-top: 16.92%;
+            //padding-top: 16.92%;
             width: 100%;
-            @media @bw1660 {
-                padding-top: 18.5%;
-            }
-            @media @bw1020 {
-                padding-top: 22.5%;
-            }
+            // @media @bw1660 {
+            //     padding-top: 18.5%;
+            // }
+            // @media @bw1020 {
+            //     padding-top: 22.5%;
+            // }
           }
     }
     &__img {
