--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,9 +1,14 @@
+@import "vendor/normalize.less";
 @import "global/variables.less";
 @import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
 @import "vendor/swiper.less";
 @import "vendor/swiper_theme.less";
+@import "vendor/selectric.less";
+@import "vendor/selectric_theme.less";
+@import "vendor/air-datepicker.less";
+@import "vendor/air-datepicker_theme.less";
 @import "blocks/header.less";
 @import "blocks/home.less";
 @import "blocks/do-it.less";
