--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -3,7 +3,8 @@
     box-sizing: border-box;
     justify-content: center;
 
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     background-color: @black;
     text-transform: uppercase;
     font-family: @font2;
