--- a/src/styles/blocks/about.less
+++ b/src/styles/blocks/about.less
@@ -105,27 +105,22 @@
     &__block2-picture2 {
         grid-area: pic2;
         align-self: flex-end;
-        
+        @media @bw500 {
+            height: 186px;
+            width: 236px;
+            justify-self: end;
+        }
     }
     &__block3 {
         display: grid;
         grid-template-columns: 1fr 400px;
         grid-template-rows: 68px 75px 60px;
-        gap: 80px 60px ;
+        gap: 80px 60px;
         margin-top: 100px;
         grid-template-areas: 
         "pic3 text"
         "pic3 text"
         "pic3 link";
-        // @media @bw1340 {
-        //     font-size: 26px;
-        // }
-        // @media @bw768 {
-        //     font-size: 26px;
-        // }
-        // @media @bw500 {
-        //     font-size: 18px;
-        // }
         @media @bw768 {
             grid-template-areas: 
             "pic3 pic3"
@@ -134,7 +129,14 @@
             grid-template-columns: 1fr 262px;
         }
         @media @bw500 {
-            font-size: 18px;
+            grid-template-areas: 
+            "pic3"
+            "text"
+            "link";
+            grid-template-columns: 1fr;
+            gap: 0px;
+            grid-template-rows: 166px 96px 90px;
+            margin-top: 200px;
         }
     }
     &__block3-content {
@@ -163,6 +165,11 @@
             content: '';
             padding-top: 40.86%;
         }
+        @media @bw500 {
+            height: 116px;
+            width: 280px;
+            //justify-self: end;
+        }
     }
     &__block3-img {
         position: absolute;
@@ -170,6 +177,9 @@
         left: 49px;
         width: calc(100% - 57px);
         object-fit: contain;
+        @media @bw500 {
+            width: calc(100% - 11px);
+        }
     }
     &__block3-link {
         grid-area: link;
