--- a/src/styles/blocks/event.less
+++ b/src/styles/blocks/event.less
@@ -1,5 +1,14 @@
 .event {
     .container;
+    .events__url{
+        margin-left: 190px;
+        @media @bw1340 {
+            margin-left: 30px;
+        }
+        @media @bw500 {
+            display: none;
+        }
+    }
     &__header {
         display: flex;
         align-items: center;
