--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -11,6 +11,9 @@
     @media @bw600 {
         padding-bottom: 60px;
     }
+    @media @bw500 {
+        padding-bottom: 50px;
+    }
     &__liners {
         display: flex;
         margin-bottom: 60px;
@@ -125,6 +128,7 @@
         @media @bw500 {
             flex-direction: column;
             gap: 20px;
+            margin-bottom: 15px;
         }
     }
     &__block2-link {
@@ -142,10 +146,19 @@
         &:active {
             color: @red;
         }
+        @media @bw500 {
+            font-size: 14px;
+        }
     }
     &__copyright {
         grid-area: copyright;
         margin-bottom: 20px;
+        @media @bw500 {
+            font-size: 14px;
+            margin-left: auto;
+            margin-right: 0px;
+            margin-bottom: 0px;
+        }
     }
     &__create {
         grid-area: create;
@@ -155,6 +168,10 @@
         align-items: flex-end;
         gap: 15px;
         font-weight: 600;
+        @media @bw500 {
+            font-size: 14px;
+            margin-bottom: 0px;
+        }
     }
     &__create-link {
         flex-shrink: 0;
