--- a/src/styles/blocks/socials.less
+++ b/src/styles/blocks/socials.less
@@ -1,6 +1,12 @@
 .socials {
     display: flex;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    @media @bw500 {
+        margin-bottom: 60px;
+        margin-top: 60px;
+    }
     &__link {
         flex-shrink: 0;
         margin-right: 44px;
@@ -24,6 +30,11 @@
         }
         &:last-child {
             margin-right: 0;
+        }
+        @media @bw500 {
+            width: 48px;
+            height: 48px;
+            margin-right: 30px;
         }
     }
     &__icon {
