--- a/src/styles/blocks/contacts.less
+++ b/src/styles/blocks/contacts.less
@@ -43,6 +43,8 @@
             flex-direction: column;
             justify-content:flex-start;
             gap: 40px;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
     &__element {
@@ -114,6 +116,8 @@
         @media @bw500 {
             width: 280px;
             height: 186px;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
