--- a/src/styles/blocks/article-card.less
+++ b/src/styles/blocks/article-card.less
@@ -69,7 +69,9 @@
     padding: 30px 0;
     padding-right: 150px;
     @media @bw500 {
-      padding: 0px;
+      //padding: 0px;
+      padding-right: 30px;
+      padding-bottom: 60px;
     }
   }
   &__time {
@@ -128,8 +130,13 @@
     color: inherit;
     transition: none;
     @media @bw500 {
-      top: auto;
       bottom: 0;
+    }
+  }
+  &__arrow-icon {
+    @media @bw500 {
+      height: 40px;
+      width: 67px;
     }
   }
   & + .article-card {
