--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -33,6 +33,12 @@
             color: @red;
         }
     }
+    &__events-link-arrow {
+        @media @bw500 {
+            height: 67px;
+            width: 40px;
+          }
+    }
     &__description {
         text-wrap: wrap;
         margin-left: 150px;
