--- a/src/styles/blocks/upcoming.less
+++ b/src/styles/blocks/upcoming.less
@@ -1,77 +1,83 @@
 .upcoming {
-    margin-top: 210px;
-    background-color: @white;
+  margin-top: 210px;
+  background-color: @white;
+  @media @bw768 {
+    margin-top: 130px;
+  }
+  @media @bw500 {
+    margin-top: 100px;
+  }
+  &__container {
+    .container;
+    
+  }
+
+  &__header {
+    margin-bottom: 150px;
+    @media @bw1340 {
+      margin-bottom: 130px;
+    }
     @media @bw768 {
-        margin-top: 130px;
+      margin-bottom: 100px;
     }
     @media @bw500 {
-        margin-top: 100px;
+      margin-bottom: 80px;
     }
-    &__container {
-        .container;
-    }
+  }
 
-    &__header {
-        margin-bottom: 150px;
-        @media @bw1340 {
-            margin-bottom: 130px;
-        }
-        @media @bw768 {
-            margin-bottom: 100px;
-        }
-        @media @bw500 {
-            margin-bottom: 80px;
-        }
-    }
+  &__nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 122px;
+  }
 
-    &__nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 122px;
-    }
+  &__nav-line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+  }
 
-    &__nav-line {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 6px;
+  &__arrow {
+    font-size: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: none;
+    background-color: transparent;
+    transition: currentColor 0.2s, color 0.2s;
+    &:hover {
+      cursor: pointer;
+      currentcolor: @red;
+      color: @red;
     }
+    &--left {
+      transform: scaleX(-1);
+    }
+    @media @bw500 {
+        padding-left: 0px;
+        padding-right: 0px;
+      margin-left: 0px;
+      margin-right: 0px;
+    }
+  }
 
-    &__arrow {
-        font-size: 0px;
-        margin-left: 20px;
-        margin-right: 20px;
-        border: none;
-        background-color: transparent;
-        transition: currentColor 0.2s, color 0.2s;
-        &:hover {
-            cursor: pointer;
-            currentColor: @red;
-            color: @red;
-        }
-        &--left {
-            transform: scaleX(-1);
-        }
+  &__line {
+    display: inline-block;
+    width: 15px;
+    height: 2px;
+    background-color: @gray;
+    &--black {
+      background-color: @black;
     }
-
-    &__line {
-        display: inline-block;
-        width: 15px;
-        height: 2px;
-        background-color: @gray;
-        &--black {
-            background-color: @black; 
-        }
+  }
+  &__see-all {
+    text-decoration: none;
+    float: right;
+    margin-top: 15px;
+    transform: color 0.2s;
+    &:hover {
+      color: @red;
     }
-    &__see-all {
-        text-decoration: none;
-        float: right;
-        margin-top: 15px;
-        transform: color 0.2s;
-        &:hover {
-            color: @red;
-        }
-    }
+  }
 }
-
