--- a/src/styles/blocks/blog-listing.less
+++ b/src/styles/blocks/blog-listing.less
@@ -2,9 +2,9 @@
     .container;
     &__header {
         margin-bottom: 150px;
-        margin-top: 200px;
+        //margin-top: 200px;
         @media @bw500 {
-            margin-top: 80px;
+            //margin-top: 80px;
             margin-bottom: 80px;
         }
     }
