--- a/src/styles/blocks/upcoming.less
+++ b/src/styles/blocks/upcoming.less
@@ -1,17 +1,61 @@
 .upcoming {
-  margin-top: 210px;
+  padding-top: 75px;
+  padding-bottom: 90px;
   background-color: @white;
-  @media @bw768 {
-    margin-top: 130px;
-  }
-  @media @bw500 {
-    margin-top: 100px;
-  }
+  
   &__container {
     .container;
-    
   }
-
+  &__triangle-top {
+    display: flex;
+    flex-direction: row;
+    margin-top: 90px;
+    @media @bw768 {
+      margin-top: 130px;
+    }
+    @media @bw500 {
+      margin-top: 100px;
+    }
+  }
+  &__triangle-top-1 {
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 30px 0 0 calc(35vw);
+    border-color: transparent transparent transparent @white;
+  }
+  &__triangle-top-2 {
+    width: 0px;
+   height: 0px;
+   border-style: solid;
+   border-width: 0 0 30px calc(65vw);
+   border-color: transparent transparent @white transparent;
+  }
+  &__triangle-bottom {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 64px;
+    @media @bw768 {
+      margin-top: 130px;
+    }
+    @media @bw500 {
+      margin-top: 100px;
+    }
+  }
+  &__triangle-bottom-1 {
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 30px calc(64vw) 0 0;
+    border-color: @white transparent transparent transparent;
+  }
+  &__triangle-bottom-2 {
+    width: 0px;
+   height: 0px;
+   border-style: solid;
+   border-width: 0 calc(36vw) 30px 0;
+   border-color: transparent @white  transparent transparent;
+  }
   &__header {
     margin-bottom: 150px;
     @media @bw1340 {
@@ -55,8 +99,8 @@
       transform: scaleX(-1);
     }
     @media @bw500 {
-        padding-left: 0px;
-        padding-right: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
       margin-left: 0px;
       margin-right: 0px;
     }
