--- a/src/styles/blocks/upcoming.less
+++ b/src/styles/blocks/upcoming.less
@@ -1,18 +1,21 @@
 .upcoming {
-  padding-top: 75px;
-  padding-bottom: 100px;
-  background-color: @white;
-  @media @bw1340 {
-    padding-top: 55px;
-    padding-bottom: 90px;
-  }
-  @media @bw768 {
-    padding-top: 60px;
-    padding-bottom: 75px;
-  }
-  @media @bw500 {
-    padding-top: 25px;
-    padding-bottom: 95px;
+  // padding-top: 75px;
+  // padding-bottom: 100px;
+  
+  // @media @bw1340 {
+  //   padding-top: 55px;
+  //   padding-bottom: 90px;
+  // }
+  // @media @bw768 {
+  //   padding-top: 60px;
+  //   padding-bottom: 75px;
+  // }
+  // @media @bw500 {
+  //   padding-top: 25px;
+  //   padding-bottom: 95px;
+  // }
+  &__background {
+    background-color: @white;
   }
 
   &__container {
@@ -58,6 +61,30 @@
       border-width: 0 0 15px calc(65vw);
     }
   }
+  &__empty-container-top {
+    height: 90px;
+    @media @bw1340 {
+      height: 70px;
+    }
+    @media @bw768 {
+      height: 60px;
+    }
+    @media @bw500 {
+      height: 25px;
+    }
+  }
+  &__empty-container-bottom {
+    height: 106px;
+    @media @bw1340 {
+      height: 100px;
+    }
+    @media @bw768 {
+      height: 75px;
+    }
+    @media @bw500 {
+      height: 90px;
+    }
+  }
   &__triangle-bottom {
     display: flex;
     flex-direction: row;
@@ -99,6 +126,7 @@
     }
   }
   &__header {
+    margin-top: 0px;
     margin-bottom: 150px;
     @media @bw1340 {
       margin-bottom: 130px;
